Mega commit! Currently still broken, flickering when getting to title screen