@@ -1,30 +1,30 @@
 package com.ultreon.bubbles.render;
 
-import com.ultreon.commons.exceptions.InvalidValueException;
+import com.ultreon.libs.commons.v0.exceptions.InvalidValueException;
 import org.jetbrains.annotations.ApiStatus;
 
 import java.util.regex.Pattern;
 
 public class Color {
-    public static Color black = Color.rgb(0x000000);
-    public static Color darkGray = Color.rgb(0x404040);
-    public static Color gray = Color.rgb(0x808080);
-    public static Color lightGray = Color.rgb(0xc0c0c0);
-    public static Color white = Color.rgb(0xffffff);
-    public static Color red = Color.rgb(0xff0000);
-    public static Color orange = Color.rgb(0xff8000);
-    public static Color gold = Color.rgb(0xffb000);
-    public static Color yellow = Color.rgb(0xffff00);
-    public static Color yellowGreen = Color.rgb(0x80ff00);
-    public static Color green = Color.rgb(0x00ff00);
-    public static Color mint = Color.rgb(0x00ff80);
-    public static Color cyan = Color.rgb(0x00ffff);
-    public static Color azure = Color.rgb(0x0080ff);
-    public static Color blue = Color.rgb(0x0000ff);
-    public static Color purple = Color.rgb(0x8000ff);
-    public static Color magenta = Color.rgb(0xff00ff);
-    public static Color rose = Color.rgb(0xff0080);
-    public static Color transparent = Color.rgba(0x00000000);
+    public static final Color BLACK = Color.rgb(0x000000);
+    public static final Color DARK_GRAY = Color.rgb(0x404040);
+    public static final Color GRAY = Color.rgb(0x808080);
+    public static final Color LIGHT_GRAY = Color.rgb(0xc0c0c0);
+    public static final Color WHITE = Color.rgb(0xffffff);
+    public static final Color RED = Color.rgb(0xff0000);
+    public static final Color ORANGE = Color.rgb(0xff8000);
+    public static final Color GOLD = Color.rgb(0xffb000);
+    public static final Color YELLOW = Color.rgb(0xffff00);
+    public static final Color YELLOW_GREEN = Color.rgb(0x80ff00);
+    public static final Color GREEN = Color.rgb(0x00ff00);
+    public static final Color MINT = Color.rgb(0x00ff80);
+    public static final Color CYAN = Color.rgb(0x00ffff);
+    public static final Color AZURE = Color.rgb(0x0080ff);
+    public static final Color BLUE = Color.rgb(0x0000ff);
+    public static final Color PURPLE = Color.rgb(0x8000ff);
+    public static final Color MAGENTA = Color.rgb(0xff00ff);
+    public static final Color ROSE = Color.rgb(0xff0080);
+    public static final Color TRANSPARENT = Color.rgba(0x00000000);
     private final java.awt.Color awtColor;
 
     private Color(long red, long green, long blue, long alpha) {
@@ -60,32 +60,32 @@ public class Color {
     }
 
     public static Color rgb(int color) {
-        var rgb = ((long) color) % 0x100000000L;
+        long rgb = ((long) color) % 0x100000000L;
         return new Color((rgb & 0xff0000L) >> 16, (rgb & 0x00ff00L) >> 8, rgb & 0x0000ffL, 255);
     }
 
     public static Color rgba(int color) {
-        var rgba = ((long) color) % 0x100000000L;
+        long rgba = ((long) color) % 0x100000000L;
         return new Color((rgba & 0xff000000L) >> 24, (rgba & 0x00ff0000L) >> 16, (rgba & 0x0000ff00L) >> 8, rgba & 0x000000ffL);
     }
 
     public static Color argb(int color) {
-        var argb = ((long) color) % 0x100000000L;
+        long argb = ((long) color) % 0x100000000L;
         return new Color((argb & 0x00ff0000L) >> 16, (argb & 0x0000ff00L) >> 8, argb & 0x000000ffL, (argb & 0xff000000L) >> 24);
     }
 
     public static Color bgr(int color) {
-        var bgr = ((long) color) % 0x100000000L;
+        long bgr = ((long) color) % 0x100000000L;
         return new Color(bgr & 0x0000ffL, (bgr & 0x00ff00L) >> 8, (bgr & 0xff0000L) >> 16, 255);
     }
 
     public static Color bgra(int color) {
-        var bgra = ((long) color) % 0x100000000L;
+        long bgra = ((long) color) % 0x100000000L;
         return new Color((bgra & 0x0000ff00L) >> 8, (bgra & 0x00ff0000L) >> 16, (bgra & 0xff000000L) >> 24, bgra & 0x000000ffL);
     }
 
     public static Color abgr(int color) {
-        var abgr = ((long) color) % 0x100000000L;
+        long abgr = ((long) color) % 0x100000000L;
         return new Color(abgr & 0x000000ffL, (abgr & 0x0000ff00L) >> 8, (abgr & 0x00ff0000L) >> 16, (abgr & 0xff000000L) >> 24);
     }
 
@@ -134,63 +134,63 @@ public class Color {
     }
 
     public java.awt.Color toAwt() {
-        return awtColor;
+        return this.awtColor;
     }
 
     public Color brighter() {
-        return new Color(awtColor.brighter());
+        return new Color(this.awtColor.brighter());
     }
 
     public Color darker() {
-        return new Color(awtColor.darker());
+        return new Color(this.awtColor.darker());
     }
 
     public int getRed() {
-        return awtColor.getRed();
+        return this.awtColor.getRed();
     }
 
     public int getGreen() {
-        return awtColor.getGreen();
+        return this.awtColor.getGreen();
     }
 
     public int getBlue() {
-        return awtColor.getBlue();
+        return this.awtColor.getBlue();
     }
 
     public int getAlpha() {
-        return awtColor.getAlpha();
+        return this.awtColor.getAlpha();
     }
 
     public int getTransparency() {
-        return awtColor.getTransparency();
+        return this.awtColor.getTransparency();
     }
 
     public int getRgb() {
-        return awtColor.getRGB();
+        return this.awtColor.getRGB();
     }
 
     public Color withRed(int red) {
-        return new Color(red, getGreen(), getBlue(), getAlpha());
+        return new Color(red, this.getGreen(), this.getBlue(), this.getAlpha());
     }
 
     public Color withGreen(int green) {
-        return new Color(getRed(), green, getBlue(), getAlpha());
+        return new Color(this.getRed(), green, this.getBlue(), this.getAlpha());
     }
 
     public Color withBlue(int blue) {
-        return new Color(getRed(), getGreen(), blue, getAlpha());
+        return new Color(this.getRed(), this.getGreen(), blue, this.getAlpha());
     }
 
     public Color withAlpha(int alpha) {
-        return new Color(getRed(), getGreen(), getBlue(), alpha);
+        return new Color(this.getRed(), this.getGreen(), this.getBlue(), alpha);
     }
 
     @Override
     public String toString() {
-        return "#%02x%02x%02x%02x".formatted(getRed(), getGreen(), getBlue(), getAlpha());
+        return String.format("#%02x%02x%02x%02x", this.getRed(), this.getGreen(), this.getBlue(), this.getAlpha());
     }
 
     public com.badlogic.gdx.graphics.Color toGdx() {
-        return new com.badlogic.gdx.graphics.Color(getRed() / 255f, getGreen() / 255f, getBlue() / 255f, getAlpha() / 255f);
+        return new com.badlogic.gdx.graphics.Color(this.getRed() / 255f, this.getGreen() / 255f, this.getBlue() / 255f, this.getAlpha() / 255f);
     }
 }
